Introduction to HTML

--- a/01-Basic Tags/index.html
+++ b/01-Basic Tags/index.html
@@ -7,5 +7,141 @@
 </head>
 <body>
     
+
+    <header>
+        I am Header
+    </header>
+    <main>
+        <section>
+            <div>
+                <h1>I am Heading 1</h1>
+                <h2>I am Heading 2</h2>
+                <h3>I am Heading 3</h3>
+                <h4>I am Heading 4</h4>
+                <h5>I am Heading 5</h5>
+                <h6>I am Heading 6</h6>
+            </div>
+            <div>
+                <p><i>Lorem ipsum dolor sit</i>, <em>amet consectetur adipisicing elit</em>. Minus fugiat, harum aperiam quisquam alias rem consequuntur earum officiis magnam doloribus dolorem ea porro fuga eos. Incidunt earum deleniti repudiandae quasi.</p>
+            </div>
+        
+            <strong>I am a Heading</strong>
+            <del>I am a deleted Text</del>
+            <p>IamaverybigwordIdontwanttobreak</p>
+        </section>
+
+        <section>
+            <h1>Table tags</h1>
+            <table>
+                <caption>I am an Example Table</caption>
+                <thead>
+                    <tr>
+                        <th>S.No</th>
+                        <th>Name</th>
+                        <th>Mobile Number</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Student 1</td>
+                        <td>8999999999</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Student </td>
+                        <td>8999999998</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section>
+            <h1>Form Section</h1>
+            <form>
+                <input type="text" id="firstName" name="firstName">
+                <label for="firstName">I am a Lable</label>
+                <textarea></textarea>
+
+                <select>
+                    <option value="Apple">Apple</option>
+                    <option value="Banana">Banana</option>
+                    <option value="Mango">mango</option>
+                </select>
+
+                <input name="favouriteFruit" list="fruits">
+                <datalist id="fruits">
+                    <option value="Apple"></option>
+                    <option value="Banana">Banana</option>
+                    <option value="Mango">mango</option>
+                </datalist>
+            </form>
+            <h2>User Registration Form</h2>
+            <form>
+                <fieldset>
+                    <legend>Personal Information</legend>
+                    <label>First Name :</label>
+                    <input type="text">
+                    <label>Last Name :</label>
+                    <input type="text">
+                </fieldset>
+                <fieldset>
+                    <legend>Contact Information</legend>
+                    <label>House No :</label>
+                    <input type="text">
+                    <label>Village :</label>
+                    <input type="text">
+                    <label>District :</label>
+                    <input type="text">
+                </fieldset>
+            </form>
+        </section>
+
+        <section>
+            <h2>List tags</h2>
+
+            <ul type="circle">
+                <li>I am a list item 1</li>
+                <li>I am a list item 2</li>
+                <li>I am a list item 3</li>
+            </ul>
+
+            <ol type="i">
+                <li>I am ordered list item 1</li>
+                <li>I am ordered list item 2</li>
+                <li>I am ordered list item 3</li>
+            </ol>
+
+            <dl>
+                <dt>HTML</dt>
+                <dd>Hypertext Markup Language</dd>
+                <dt>CSS</dt>
+                <dd>Cascading Stylesheets</dd>
+            </dl>
+        </section>
+
+        <section>
+            <h2>Media Tags</h2>
+            <audio controls>
+                <source src="./assets/sample.mp3" type="audio/mpeg">
+                Your browser does not support this media element
+            </audio>
+            <video controls width="640">
+                <source src="./assets/sample.mp4" type="video/mp4">
+                Your browser does not support this media element
+            </video>
+            <img src="./assets/logo.png"/>
+            <svg>
+                <circle cx="50" cy="50" r="40" fill="red"></circle>
+            </svg>
+            <figure>
+                <img src="./assets/logo.png"/>
+                <figcaption>This is my Logo</figcaption>
+            </figure>
+        </section>
+    </main>
+    <footer>
+        All rights Reseved
+    </footer>
 </body>
 </html>
