--- a/02-CSS Introduction/index.html
+++ b/02-CSS Introduction/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction CSS</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 class="color-green">Introduction to CSS</h1>
@@ -50,5 +53,49 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nihil vitae beatae voluptatem enim corrupti, magni esse laudantium ducimus, aperiam expedita nam. Id illum facere at nobis delectus? Accusamus, debitis.</p>
     </div>
     <p class="text-decoration-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laudantium nesciunt corrupti eveniet aut illum, quo quia, itaque dolor eum quis? Voluptatibus modi quia culpa enim iste. Illo, veritatis nihil!</p>
+
+    <p class="font-size-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora consequatur similique quaerat, molestiae hic alias, laudantium quae optio reiciendis sint repellendus placeat error fuga, ex quidem aliquam eius nostrum aut.</p>
+
+   <div>
+        <p style="font-weight:100">My Font Weight is 100</p>
+        <p style="font-weight:200">My Font Weight is 200</p>
+        <p style="font-weight:300">My Font Weight is 300</p>
+        <p style="font-weight:400">My Font Weight is 400</p>
+        <p style="font-weight:500">My Font Weight is 500</p>
+        <p style="font-weight:600">My Font Weight is 600</p>
+        <p style="font-weight:700">My Font Weight is 700</p>
+        <p style="font-weight:800">My Font Weight is 800</p>
+        <p style="font-weight:900">My Font Weight is 900</p>
+   </div>
+
+   <div class='linear-gradients'>
+        <div class="linear-gradient-1">
+
+        </div>
+
+        <div class="linear-gradient-2">
+
+        </div>
+
+        <div class="linear-gradient-3">
+
+        </div>
+   </div>
+
+   <div class='radial-gradients'>
+        <div class="radial-gradient-1">
+
+        </div>
+    </div>
+
+    <div class='conic-gradients'>
+        <div class="conic-gradient-1">
+
+        </div>
+
+        <div class="conic-gradient-2">
+
+        </div>
+    </div>
 </body>
 </html>
