Resume - Final Code

--- a/Projects/01-Resume/index.html
+++ b/Projects/01-Resume/index.html
@@ -110,9 +110,152 @@
                 </div>
             </div>
 
+            <!-- Internships -->
+            <div class="internship-section grid-1">
+                <h2 class="heading-secondary heading-dark">
+                    <span class="common-icon-l">
+                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    </span>
+                    Internship
+                </h2>
+                <div class="internship">
+                    <div class="internship-detail">
+                        <h3 class="heading-tertiary">junior intern at google</h3>
+                        <p class="heading-fourth">
+                            <span class="margin-right-m">Duration: </span>
+                            6 Months
+                        </p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque nisi alias deleniti omnis expedita ducimus.</p>
+                        <ul class="detail-list">
+                            <li class="detail-list-item">Lorem ipsum dolor sit amet consectetur.</li>
+                            <li class="detail-list-item">adipisicing elit. Eaque nisi alias deleniti.</li>
+                            <li class="detail-list-item">Lorem ipsum dolor sit amet consectetur.</li>
+                            <li class="detail-list-item">Eaque nisi alias deleniti omnis expedita ducimus.</li>
+                            <li class="detail-list-item">nisi alias deleniti omnis expedita ducimus..</li>
+                            <li class="detail-list-item">ipsum dolor sit amet consectetur.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="personal-info">
+            <!-- Photo -->
+            <div class="photo-box">
+                <img src="./assets/photo.jpg" alt="The Candidate Photo" class="candidate-photo">
+            </div>
+            <!-- Contact Info -->
+            <div class="grid-1">
+                <h2 class="heading-secondary heading-light">
+                    <span class="common-icon-l">
+                        <i class="fa fa-address-card-o" aria-hidden="true"></i>
+                    </span>
+                    Contact
+                </h2>
+                <div class="flex-box-1">
+                    <div class="common-icon-m">
+                        <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="flex-box-1-text">
+                        <span>lorem.epsum@gmail.com</span>
+                    </div>
+                </div>
+                <div class="flex-box-1">
+                    <div class="common-icon-m">
+                        <i class="fa fa-phone-square" aria-hidden="true"></i>
+                    </div>
+                    <div class="flex-box-1-text">
+                        <span>+91 9999999999</span>
+                    </div>
+                </div>
+                <div class="flex-box-1">
+                    <div class="common-icon-m">
+                        <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="flex-box-1-text">
+                        <span>Hyderabad, India</span>
+                    </div>
+                </div>
 
+            </div>
+
+
+            <!-- Skills -->
+            <div class="skills-info">
+                <h2 class="heading-secondary heading-light">
+                    <span class="common-icon-l">
+                        <i class="fa fa-rocket" aria-hidden="true"></i>
+                    </span>
+                    SKILLS
+                </h2>
+                <ul class="list-block">
+                    <li class="list-item">HTML5</li>
+                    <li class="list-item">CSS3</li>
+                    <li class="list-item">JavaScript</li>
+                    <li class="list-item">Java</li>
+                    <li class="list-item">MySQL</li>
+                    <li class="list-item">Spring-boot</li>
+                    <li class="list-item">Hibernate</li>
+                    <li class="list-item">Angular</li>
+                </ul>
+            </div>
+
+            <!-- Intrests -->
+            <div class="interests-info grid-1">
+                <h2 class="heading-secondary heading-light">
+                    <span class="common-icon-l">
+                        <i class="fa fa-heart" aria-hidden="true"></i>
+                    </span>
+                    InTEREST
+                </h2>
+
+                <div class="flex-box-1">
+                    <div class="common-icon-m">
+                        <span><i class="fa fa-music" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="flex-box-1-text">
+                        <span>Music</span>
+                    </div>
+                </div>
+
+                <div class="flex-box-1">
+                    <div class="common-icon-m">
+                        <span><i class="fa fa-futbol-o" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="flex-box-1-text">
+                        <span>Football</span>
+                    </div>
+                </div>
+
+                <div class="flex-box-1">
+                    <div class="common-icon-m">
+                        <span><i class="fa fa-book" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="flex-box-1-text">
+                        <span>Book Reading</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Languages -->
+            <div class="languages grid-1">
+                <h2 class="heading-secondary heading-light">
+                    <span class="common-icon-l">
+                        <i class="fa fa-language" aria-hidden="true"></i>
+                    </span>
+                    LANGUAGES
+                </h2>
+                <div class="flex-box-1">
+                    <span class="text-uppercase">ENGLISH</span>
+                </div>
+                <div class="flex-box-1">
+                    <span class="text-uppercase">HINDI</span>
+                </div>
+                <div class="flex-box-1">
+                    <span class="text-uppercase">TELUGU</span>
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
