Few sections added

--- a/Projects/02-College/index.html
+++ b/Projects/02-College/index.html
@@ -176,6 +176,186 @@
                 </a>
             </div>
         </section>
+
+        <!-- Placements Section -->
+        <section class="placement-partners">
+            <h2 class="heading-secondary mb-l">Our Placement Partners</h2>
+            <div class="grid-4">
+                <div class="brand-container">
+                    <img src="./assets/tcs.png">
+                </div>
+                <div class="brand-container">
+                    <img src="./assets/infosys.png">
+                </div>
+                <div class="brand-container">
+                    <img src="./assets/wipro.png">
+                </div>
+                <div class="brand-container">
+                    <img src="./assets/cognizent.png">
+                </div>
+            </div>
+        </section>
+
+        <!-- Placed Students -->
+        <section class="placed-students">
+            <h2 class="heading-secondary mb-l">Some Success Stories</h2>
+            <div class="grid-3">
+                <!-- 1 -->
+                <div class="student-placed">
+                    <div class="student-placed-img-box">
+                        <img src="./assets/placements/1.jpg" alt="Student Photo" class="student-placed-img">
+                    </div>
+                    <div class="student-placed-text-box">
+                        <h4 class="student-placed-title">Vikrant Rana</h4>
+                        <div class="placement-detail">
+                            <span class="placed-lpa">
+                                24 LPA
+                            </span>
+                            <div class="placed-company">
+                                Amazon
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2 -->
+                <div class="student-placed">
+                    <div class="student-placed-img-box">
+                        <img src="./assets/placements/2.jpg" alt="Student Photo" class="student-placed-img">
+                    </div>
+                    <div class="student-placed-text-box">
+                        <h4 class="student-placed-title">ASHOCK TRIPATI</h4>
+                        <div class="placement-detail">
+                            <span class="placed-lpa">
+                                18 LPA
+                            </span>
+                            <div class="placed-company">
+                                INFOSYS
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 3 -->
+                <div class="student-placed">
+                    <div class="student-placed-img-box">
+                        <img src="./assets/placements/3.jpg" alt="Student Photo" class="student-placed-img">
+                    </div>
+                    <div class="student-placed-text-box">
+                        <h4 class="student-placed-title">SANGEETH KRISHNA</h4>
+                        <div class="placement-detail">
+                            <span class="placed-lpa">
+                                18 LPA
+                            </span>
+                            <div class="placed-company">
+                                INFOSYS
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 4 -->
+                <div class="student-placed">
+                    <div class="student-placed-img-box">
+                        <img src="./assets/placements/4.jpg" alt="Student Photo" class="student-placed-img">
+                    </div>
+                    <div class="student-placed-text-box">
+                        <h4 class="student-placed-title">KAMAL KRISHNA</h4>
+                        <div class="placement-detail">
+                            <span class="placed-lpa">
+                                16 LPA
+                            </span>
+                            <div class="placed-company">
+                                ACCENTURE
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 5 -->
+                <div class="student-placed">
+                    <div class="student-placed-img-box">
+                        <img src="./assets/placements/5.jpg" alt="Student Photo" class="student-placed-img">
+                    </div>
+                    <div class="student-placed-text-box">
+                        <h4 class="student-placed-title">JHON PAUL</h4>
+                        <div class="placement-detail">
+                            <span class="placed-lpa">
+                                16 LPA
+                            </span>
+                            <div class="placed-company">
+                                INFOSYS
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 6 -->
+                <div class="student-placed">
+                    <div class="student-placed-img-box">
+                        <img src="./assets/placements/6.jpg" alt="Student Photo" class="student-placed-img">
+                    </div>
+                    <div class="student-placed-text-box">
+                        <h4 class="student-placed-title">MARRY JOSEPH</h4>
+                        <div class="placement-detail">
+                            <span class="placed-lpa">
+                                16 LPA
+                            </span>
+                            <div class="placed-company">
+                                INFOSYS
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cta-box mt-l">
+                <a href="#" class="cta-secondary">View More &rarr;</a>
+            </div>
+        </section>
+
+        <!-- Achievemnts -->
+        <section class="achievments">
+            <h2 class="heading-secondary mb-l">achievments</h2>
+            <div class="grid-4">
+                <!-- 1 -->
+                <div class="achievment-box">
+                    <div class="achievment-count">
+                        2356+
+                    </div>
+                    <p class="achievment-text">
+                        Students Placed
+                    </p>
+                </div>
+                <!-- 2 -->
+                <div class="achievment-box">
+                    <div class="achievment-count">
+                        10.5 LPA
+                    </div>
+                    <p class="achievment-text">
+                        Average CTC Offered
+                    </p>
+                </div>
+                <!-- 3 -->
+                <div class="achievment-box">
+                    <div class="achievment-count">
+                        589+
+                    </div>
+                    <p class="achievment-text">
+                        Research Publications
+                    </p>
+                </div>
+                <!-- 4 -->
+                <div class="achievment-box">
+                    <div class="achievment-count">
+                        22+
+                    </div>
+                    <p class="achievment-text">
+                        International Hackathons
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
