Footer and Staff section

--- a/Projects/02-College/index.html
+++ b/Projects/02-College/index.html
@@ -356,7 +356,150 @@
                 </div>
             </div>
         </section>
+
+        <!-- Staff Section -->
+        <section class="staff-section">
+            <h2 class="heading-secondary mb-l">Our Staff</h2>
+            <div class="grid-2">
+
+                <!-- 1 -->
+                <div class="staff-content">
+                    <div class="staff-img-box">
+                        <img src="./assets/teachers/1.jpg" alt="Teach Photo" class="staff-img">
+                    </div>
+                    <div class="staff-content-box">
+                        <p class="staff-tittle">Dr Neelesh krishna</p>
+                        <p class="staff-qualification">PHD in Digital Engineering</p>
+                        <p class="staff-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dignissimos beatae at? Accusantium, harum.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- 2 -->
+                <div class="staff-content">
+                    <div class="staff-img-box">
+                        <img src="./assets/teachers/2.jpg" alt="Teach Photo" class="staff-img">
+                    </div>
+                    <div class="staff-content-box">
+                        <p class="staff-tittle">Dr ATUL BORA</p>
+                        <p class="staff-qualification">PHD in Machine learning</p>
+                        <p class="staff-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dignissimos beatae at? Accusantium, harum.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- 3 -->
+                <div class="staff-content">
+                    <div class="staff-img-box">
+                        <img src="./assets/teachers/3.jpg" alt="Teach Photo" class="staff-img">
+                    </div>
+                    <div class="staff-content-box">
+                        <p class="staff-tittle">Dr LINDSAY GOLDER</p>
+                        <p class="staff-qualification">PHD in Autonomous Systems</p>
+                        <p class="staff-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dignissimos beatae at? Accusantium, harum.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- 4 -->
+                <div class="staff-content">
+                    <div class="staff-img-box">
+                        <img src="./assets/teachers/4.jpg" alt="Teach Photo" class="staff-img">
+                    </div>
+                    <div class="staff-content-box">
+                        <p class="staff-tittle">Dr EMMA</p>
+                        <p class="staff-qualification">PHD in Crypto Technology</p>
+                        <p class="staff-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dignissimos beatae at? Accusantium, harum.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- 5 -->
+                <div class="staff-content">
+                    <div class="staff-img-box">
+                        <img src="./assets/teachers/5.jpg" alt="Teach Photo" class="staff-img">
+                    </div>
+                    <div class="staff-content-box">
+                        <p class="staff-tittle">Dr AMELIA</p>
+                        <p class="staff-qualification">PHD in Quantu Computing</p>
+                        <p class="staff-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dignissimos beatae at? Accusantium, harum.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- 6 -->
+                <div class="staff-content">
+                    <div class="staff-img-box">
+                        <img src="./assets/teachers/6.jpg" alt="Teach Photo" class="staff-img">
+                    </div>
+                    <div class="staff-content-box">
+                        <p class="staff-tittle">Dr TERRENCE</p>
+                        <p class="staff-qualification">PHD in Data Visualisation</p>
+                        <p class="staff-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dignissimos beatae at? Accusantium, harum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cta-box mt-l">
+                <a href="#" class="cta-secondary">View Others &rarr;</a>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="grid-2 footer-content">
+            <div class="contact-us">
+                <div class="address-box mb-m">
+                    <p class="footer-title">LearnJagah College</p>
+                    <p class="footer-text">28-986, South Colony</p>
+                    <p class="footer-text">Hyderabad, India</p>
+                    <p class="footer-text">+91 0000000000</p>
+                    <p class="footer-text">learn.jagah@gmail.com</p>
+                </div>
+                <div class="social-media-grid">
+                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                </div>
+            </div>
+
+            <div class="reach-us">
+                <p class="footer-title mb-m">Contact Us</p>
+                <form action="#" method="post">
+                    <div class="input-content">
+                        <input type="text" placeholder="Name">
+                    </div>
+                    <div class="input-content">
+                        <input type="text" placeholder="Email">
+                    </div>
+                    <div class="input-content">
+                        <input type="text" placeholder="Wriite Here">
+                    </div>
+                    <div class="input-content">
+                        <span>
+                            <input type="radio" id="student" name="student" class="radio-input">
+                            <label for="student" class="radio-label"></label>
+                            <label for="student" class="radio-text">Student</label>
+                        </span>
+                        <span>
+                            <input type="radio" id="other" name="student" class="radio-input">
+                            <label for="other" class="radio-label"></label>
+                            <label for="other" class="radio-text">OTHER</label>
+                        </span>
+                    </div>
+                    <div class="input-content">
+                        <input type="submit" value="submit">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
