--- a/Projects/02-College/index.html
+++ b/Projects/02-College/index.html
@@ -23,7 +23,22 @@
                 <li><a href="#" class="nav-link">Staff</a></li>
                 <li><a href="#" class="nav-link">Contact</a></li>
             </ul>
+            <div class="menu-icon">
+                <input type="checkbox" name="show-mobile-nav" id="show-mobile-nav" class="show-mobile-nav">
+                <label for="show-mobile-nav" class="show-mobile-nav-label"></label>
+                <div class="mobile-nav-links">
+                    <ul class="mobile-links">
+                        <li><a href="#" class="mobile-nav-link">Home</a></li>
+                        <li><a href="#" class="mobile-nav-link">Course</a></li>
+                        <li><a href="#" class="mobile-nav-link">Achievements</a></li>
+                        <li><a href="#" class="mobile-nav-link">Placements</a></li>
+                        <li><a href="#" class="mobile-nav-link">Staff</a></li>
+                        <li><a href="#" class="mobile-nav-link">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
+        
         <div class="content-box">
             <h1 class="heading-hero">Oppurtunities Dont happen</h1>
             <h2 class="heading-hero mb-l">We create therm for you</h2>
